--- a/emxchange-client/package.json
+++ b/emxchange-client/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@elliemae/ds-basic": "^0.1.60",
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-router": "^4.3.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
