--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.2",
     "react-router": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "user": "0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
