--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - "5000:5000"
     # env_file: ./server/.env # TODO - uncomment this to auto-load your .env file!
     environment:
-      - NODE_ENV=development
-      - CHOKIDAR_USEPOLLING=true
+      - MONGO_URI=mongodb://db:27017
+      - PORT=5000
     depends_on:
       - db
   client:
