--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.4.14",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "request": "^2.88.0"
   }
 }
