--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "compromise": "^11.13.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
@@ -16,7 +17,6 @@
     "jade": "~1.11.0",
     "mongoose": "^5.4.14",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.10",
-    "request": "^2.88.0"
+    "nodemon": "^1.18.10"
   }
 }
