--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "popper.js": "^1.14.7",
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-typeahead": "^3.3.4",
     "react-dom": "^16.8.2",
     "react-router": "^4.3.1",
