--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-typeahead": "^3.3.4",
     "react-dom": "^16.8.2",
+    "react-icons": "^3.4.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
