--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
     "body-parser": "^1.18.3",
     "compromise": "^11.13.1",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
+    "express-validator": "^5.3.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "mongoose": "^5.4.14",
